tests/ui/parser/doc-before-mod-rbrace.rs
mod Foo {
    /// document
    //~^ ERROR expected item after doc comment
}

fn main() {}

// ferrocene-annotations: fls_q8l2jza7d9xa
// Comments
